<resources>
    <string name="app_name">Music</string>
    <string name="app_author">Feive Gian Borcillo</string>
    <!-- Content descriptions -->
    <string name="content_description_cover_art">Cover art for current media</string>
    <string name="content_description_playback_state">Play or pause current media</string>
    <string name="content_description_playback_seek">Seek media position</string>
    <string name="content_description_preference_editor_add">Add a new preference item</string>
    <!-- Playback strings -->
    <string name="playback_seek_default">0:00</string>
    <string name="playback_seek_format_short">%1$d:%2$s</string>
    <string name="playback_seek_format_long">%1$d:%2$d:%3$s</string>
    <string name="playback_file_open_error">An unexpected error occurred while trying to play the audio file.</string>
    <!-- Device info strings -->
    <string name="device_info_title">Device Information</string>
    <string name="device_info_device">Device: %1$s</string>
    <string name="device_info_brand">Brand: %1$s</string>
    <string name="device_info_model">Model: %1$s</string>
    <string name="device_info_product">Product: %1$s</string>
    <string name="device_info_manufacturer">Manufacturer: %1$s</string>
    <string name="device_info_supported_abis">Supported ABIs: %1$s</string>
    <string name="device_info_os_base">OS base: %1$s</string>
    <string name="device_info_os_codename">OS codename: %1$s</string>
    <string name="device_info_os_release">OS release: %1$s</string>
    <string name="device_info_os_sdk_version">OS SDK version: %1$d</string>
    <string name="device_info_os_security_patch">OS security patch: %1$s</string>
    <string name="device_info_package_name">Package name: %1$s</string>
    <string name="device_info_package_version">Version: %1$s</string>
    <string name="device_info_package_version_code">Code: %1$d</string>
    <string name="device_info_package_type">Type: %1$s</string>
    <string name="device_info_dump_file">Dump to File</string>
    <string name="device_info_dump_file_success">Dump success</string>
    <string name="device_info_dump_file_fail_not_found">File not found while dumping information.</string>
    <string name="device_info_dump_file_fail_io">Cannot perform IO operations right now, try again later.</string>
    <string name="device_info_refresh">Refresh</string>
    <string name="device_info_refresh_success">Refresh success</string>
    <!-- Service test strings -->
    <string name="service_test_title">Service Test</string>
    <string name="service_test_running">Is service running: %1$b</string>
    <string name="service_test_connected">Is connected to session: %1$b</string>
    <string name="service_test_previous">Has previous item: %1$b</string>
    <string name="service_test_next">Has next item: %1$b</string>
    <string name="service_test_playback_state">Playback state: %1$d</string>
    <string name="service_test_media_count">Total media count: %1$d</string>
    <string name="service_test_media_index"> Media index: %1$d</string>
    <string name="service_test_duration">Duration: %1$d</string>
    <string name="service_test_duration_position">Duration position: %1$d</string>
    <string name="service_test_device_volume_max">Device max volume: %1$d</string>
    <string name="service_test_device_volume_min">Device min volume: %1$d</string>
    <string name="service_test_device_volume_current">Device current volume: %1$d</string>
    <string name="service_test_clear_media_item">Clear media item</string>
    <string name="service_test_clear_media_item_success">Removed item from session</string>
    <string name="service_test_clear_media_item_fail">Couldn\'t remove item, maybe session has already disconnected?</string>
    <string name="service_test_set_media_item">Set media item</string>
    <string name="service_test_set_media_item_success">New media item set to session</string>
    <string name="service_test_set_media_item_fail">Couldn\'t transact media item, maybe session has already disconnected?</string>
    <string name="service_test_connect_session">Connect session</string>
    <string name="service_test_connect_session_success">Connection to session successful</string>
    <string name="service_test_disconnect_session">Disconnect session</string>
    <string name="service_test_disconnect_session_success">Disconnected from session</string>
    <!-- Preference editor settings -->
    <string name="preference_editor_title">Preference editor</string>
    <string name="preference_editor_edit_item_title">Edit preference item</string>
    <string name="preference_editor_edit_item_title_alt">New preference item</string>
    <string name="preference_editor_edit_item_type">Type:</string>
    <string name="preference_editor_edit_item_key_hint">Key</string>
    <string name="preference_editor_edit_item_key_empty">Key must not be empty</string>
    <string name="preference_editor_edit_item_value_hint">Value</string>
    <string name="preference_editor_edit_item_value_empty">Value must not be empty</string>
    <string name="preference_editor_delete_item_title">Delete preference item</string>
    <string name="preference_editor_delete_item_message">Are you sure you want to delete %1$s?</string>
    <string name="preference_editor_delete_item_positive">Yes</string>
    <string name="preference_editor_delete_item_negative">No</string>
    <!-- Preference strings -->
    <string name="preference_title">Settings</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_appearance_summary">Customize app interface</string>
    <string name="preference_looks">Look and Feel</string>
    <string name="preference_looks_theme">Theme</string>
    <string name="preference_looks_dynamic_colors">Dynamic colors</string>
    <string name="preference_information">Information</string>
    <string name="preference_information_title_format">Title format</string>
    <string name="preference_information_title_format_default">%title%</string>
    <string name="preference_information_subtitle_format">Sub-title format</string>
    <string name="preference_information_subtitle_format_default">%album_artist%</string>
    <string name="preference_layout">Layout</string>
    <string name="preference_layout_animate_changes">Animate changes</string>
    <string name="preference_layout_animate_changes_summary">Certain UI elements will be animated depending how the layout is changed</string>
    <string name="preference_layout_immersive_mode">Immersive mode</string>
    <string name="preference_audio">Audio</string>
    <string name="preference_audio_summary">Alter how the playback works</string>
    <string name="preference_playback">Playback</string>
    <string name="preference_playback_audio_focus">Audio focus</string>
    <string name="preference_playback_audio_focus_summary">Prevent audio playback from simultaneously playing with other apps</string>
    <string name="preference_playback_duration_interval">Duration interval (ms)</string>
    <string name="preference_about">About</string>
    <string name="preference_about_summary">View what this application is all about</string>
    <string name="preference_about_name">Music</string>
    <string name="preference_about_version">Version %1$s</string>
    <string name="preference_about_updates">Check for updates</string>
    <string name="preference_author">Author</string>
    <string name="preference_author_name">Feive Gian Borcillo</string>
    <string name="preference_author_name_summary">feivegian (spir0th)</string>
    <string name="preference_author_donate">Donate</string>
    <string name="preference_author_donate_summary">Buy me a coffee!</string>
    <string name="preference_experiments">Experiments</string>
    <string name="preference_experiments_crash_logs">Crash Logs</string>
    <string name="preference_experiments_crash_logs_empty">No crash logs found.</string>
    <string name="preference_experiments_service_test">Service Test</string>
    <string name="preference_experiments_device_info">Device Information</string>
    <string name="preference_experiments_preference_editor">Preference Editor</string>
    <string name="preference_discover_experiments">Experiments have been enabled, have fun!</string>
    <!-- Snackbar strings -->
    <string name="snackbar_restart_required">A setting has changed, which requires a restart.</string>
    <string name="snackbar_restart_required_action">Restart</string>
    <!-- Dialog strings -->
    <string name="dialog_restart_title">Restart application</string>
    <string name="dialog_restart_message">Are you sure you want to restart? Unsaved changes will be lost.</string>
    <string name="dialog_restart_positive">Yes</string>
    <string name="dialog_restart_negative">No</string>
    <string name="dialog_clear_media_items_title">Clear media items?</string>
    <string name="dialog_clear_media_items_message">Items that are added onto the current queue will be lost!</string>
    <string name="dialog_clear_media_items_positive">Confirm</string>
    <string name="dialog_clear_media_items_negative">Cancel</string>
    <string name="dialog_create_media_item_title">New media item</string>
    <string name="dialog_create_media_item_positive">Create</string>
    <string name="dialog_create_media_item_negative">Cancel</string>
    <string name="dialog_preference_edit_positive">OK</string>
    <string name="dialog_preference_edit_negative">Cancel</string>
    <string name="dialog_preference_edit_alert_title">Warning</string>
    <string name="dialog_preference_edit_alert_message">Changing preferences directly without pure knowledge can lead to crashes, use at your own risk!</string>
    <string name="dialog_preference_edit_alert_positive">I understand</string>
    <string name="dialog_crash_logs_title">Crash Logs</string>
    <string name="dialog_crash_logs_neutral">Clear</string>
    <string name="dialog_crash_logs_negative">Close</string>
    <string name="dialog_crash_logs_clear">%1$d logs cleared</string>
</resources>