<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/baseline_auto_awesome_24"
        app:fragment="io.github.spir0th.music.fragments.AppearancePreferenceFragment"
        app:title="@string/preference_appearance"
        app:summary="@string/preference_appearance_summary" />
    <Preference
        app:icon="@drawable/baseline_audiotrack_24"
        app:fragment="io.github.spir0th.music.fragments.AudioPreferenceFragment"
        app:title="@string/preference_audio"
        app:summary="@string/preference_audio_summary" />
    <Preference
        app:icon="@drawable/baseline_info_24"
        app:fragment="io.github.spir0th.music.fragments.AboutFragment"
        app:title="@string/preference_about"
        app:summary="@string/preference_about_summary" />
    <Preference
        app:key="experiments"
        app:fragment="io.github.spir0th.music.fragments.ExperimentsFragment"
        app:isPreferenceVisible="false"
        app:icon="@drawable/baseline_science_24"
        app:title="@string/preference_experiments" />
</PreferenceScreen>