<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:key="crash_logs"
        app:title="@string/preference_experiments_crash_logs" />
    <Preference
        app:key="device_info"
        app:title="@string/preference_experiments_device_info">

        <intent
            android:targetPackage="io.github.feivegian.music"
            android:targetClass="io.github.feivegian.music.activities.DeviceInfoActivity" />
    </Preference>
    <Preference
        app:key="preference_editor"
        app:title="@string/preference_experiments_preference_editor">

        <intent
            android:targetPackage="io.github.feivegian.music"
            android:targetClass="io.github.feivegian.music.activities.PreferenceEditorActivity" />
    </Preference>
</PreferenceScreen>