<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="64dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />

            <TextView
                android:id="@+id/info_subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="250dp"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/cover_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_cover_art" />
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/playback_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialIconButtonOutlinedStyle"
                android:id="@+id/playback_state"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_playback_state"
                android:checkable="true"
                app:icon="@drawable/button_playback_state" />

            <com.google.android.material.slider.Slider
                style="@style/Widget.Material3.Slider.Legacy"
                android:id="@+id/playback_seek"
                android:contentDescription="@string/content_description_playback_seek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/playback_seek_position"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/playback_seek_default"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>