<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingStart="32dp"
    android:paddingEnd="64dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="250dp"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_artwork" />
    </com.google.android.material.card.MaterialCardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:id="@+id/playback_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonOutlinedStyle"
            android:id="@+id/playback_state"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_playback_state"
            android:checkable="true"
            app:icon="@drawable/button_playback_state" />

        <com.google.android.material.slider.Slider
            style="@style/Widget.Material3.Slider.Legacy"
            android:id="@+id/playback_seek"
            android:contentDescription="@string/content_description_playback_seek"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/playback_seek_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/playback_seek_default"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />
    </LinearLayout>
</LinearLayout>